# terrasignal

./: .gitignore  CLAUDE.md  README.es.md  README.md  docker-compose.yml  project-1-cre-rent-risk-platform.md  project-2-agentic-lease-abstraction.md  pyproject.toml
shared/: __init__.py
shared/audit/: __init__.py  schemas.py  writer.py
shared/bedrock/: __init__.py  backends.py  guard.py  payloads.py
shared/core/: __init__.py  types.py
shared/dq/: __init__.py  report.py
shared/tests/: test_dq_report.py  test_money.py  test_rationale.py
terrasignal/: README.md  __init__.py  settings.py
terrasignal/backend/: __init__.py  export_openapi.py
terrasignal/backend/app/: audit.py  auth.py  db.py  flags.py  logging_config.py  main.py  models_service.py  queries.py  schemas.py
terrasignal/backend/app/routers/: auth.py  feedback.py  (+4 more)
terrasignal/backend/tests/: test_app.py
terrasignal/config/governed/: thresholds.yaml
terrasignal/db/: alembic.ini
terrasignal/db/migrations/: env.py
terrasignal/features/: __init__.py  build.py  definitions.py  finmath.py
terrasignal/frontend/: .env.local.example  next.config.mjs  openapi.json  package-lock.json  package.json  tailwind.config.ts
terrasignal/governance/: model_card_template.md
terrasignal/ingestion/: __init__.py  __main__.py  contracts.py  reconcile.py  run.py
terrasignal/synth/: __init__.py  __main__.py  clauses.py  dirt.py  generator.py  load.py  markets.py
terrasignal/tests/: conftest.py  test_dq.py  test_features.py  test_finmath.py  test_synth.py
terrasignal/training/: __init__.py  __main__.py  batch_score.py  drift.py  registry.py  rent_forecaster.py  risk_scorer.py
(+34 files in other folders)
