[project]
name = "proyectos-inmobiliarios"
version = "0.1.0"
description = "TerraSignal — CRE Rent Forecasting & Tenant Default Risk Platform (local demo)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.17",
    "numpy>=2.0,<2.3",
    "numba>=0.60",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "shap>=0.46",
    "pandera[polars]>=0.21",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "structlog>=24.4",
    "pyjwt>=2.10",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "matplotlib>=3.9",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.119",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "terrasignal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency-injection idiom (`= Depends(...)` in defaults) is a known
# B008 false positive; it's the framework's intended pattern, not a mutable default.
"terrasignal/backend/app/routers/*.py" = ["B008"]
"terrasignal/backend/app/auth.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["shared", "terrasignal"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["shared"]
